--- a/README.rdoc
+++ b/README.rdoc
@@ -1,21 +1,6 @@
 = rubycommitters.org
 
-This is the source code for the rubycommitters.org website.
-
-== Hacking
-
-First clone the repo:
-
-    $ git clone git://github.com/tenderlove/rubycommitters.org.git
-    $ cd rubycommitters.org
-
-Then import committer data
+Contest entry for https://github.com/tenderlove/rubycommitters.org
 
     $ bundle install
     $ rake import
-
-Start your server
-
-    $ ruby script/rails server
-
-Have fun hacking!
