--- a/README.rdoc
+++ b/README.rdoc
@@ -9,13 +9,12 @@ First clone the repo:
     $ git clone git://github.com/tenderlove/rubycommitters.org.git
     $ cd rubycommitters.org
 
-Then import committer data
+Generate the website
 
-    $ bundle install
-    $ rake import
+    $ rake
 
-Start your server
+Open the index
 
-    $ ruby script/rails server
+    $ open public/index.html
 
 Have fun hacking!
